--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="page-header">
         <nav class="nav-menu">
-            <a class="logo" href="./index.html"><span class="enother-color-logo">Web</span>Studio</a>
+            <a class="logo" href="./index.html">Web<span class="enother-color-logo">Studio</span></a>
             <ul class="list">
                 <li>
                     <a class="link" href="#studio">Studio</a>
