--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a class="logo" href="./index.html">Web<span class="enother-color-logo">Studio</span></a>
             <ul class="list">
                 <li>
-                    <a class="link" href="#studio">Studio</a>
+                    <a class="link" href="">Studio</a>
                 </li>
                 <li>
                     <a class="link" href="#portfolio">Portfolio</a>
