--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                     <a class="link" href="./index.html">Studio</a>
                 </li>
                 <li>
-                    <a class="link" href="#portfolio">Portfolio</a>
+                    <a class="link" href="">Portfolio</a>
                 </li>
                 <li>
-                    <a class="link" href="#contacts">Contacts</a>
+                    <a class="link" href="">Contacts</a>
                 </li>
             </ul>
         </nav>
