--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         </address>
     </header>
     <main>
-        <section id="studio">
-            <h1 class="page-tytle"> Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+        <section class="studio">
+            <h1 class="page-title"> Effective Solutions for Your Business</h1>
+            <button class="btn" type="button">Order Service</button>
         </section>
         <section id="portfolio">
             <h2  class="about-page">Promises</h2>
