--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h1 class="page-title"> Effective Solutions for Your Business</h1>
             <button class="btn" type="button">Order Service</button>
         </section>
-        <section id="portfolio">
+        <section class="portfolio">
             <h2  class="about-page">Promises</h2>
             <ul class="list">
                 <li>
