--- a/index.html
+++ b/index.html
@@ -45,12 +45,10 @@
             <button class="btn" type="button">Order Service</button>
         </section>
         <section class="portfolio">
+            <h2 >Promises</h2>
             <ul class="list">
                 <li>
-                    <h2 class="about-page">Promises</h2>
-                </li>
-                <li>
-                    <h3>Strategy</h3>
+                    <h3 class="about-page">Strategy</h3>
                     <p class="text-section">
                         Our goal is to identify the business
                         problem to walk away with the
@@ -58,7 +56,7 @@
                     </p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
+                    <h3 class="about-page">Punctuality</h3>
                     <p class="text-section">
                         Bring the key message to the
                         brand's audience for the best price
@@ -66,13 +64,13 @@
                     </p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
+                    <h3 class="about-page">Diligence</h3>
                     <p class="text-section">Research and confirm brands that
                         present the strongest digital growth
                         opportunities and minimize risk.</p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
+                    <h3 class="about-page">Technologies</h3>
                     <p class="text-section">
                         Design practice focused on digital
                         experiences. We bring forth a deep
