--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </section>
     </main>
     <footer class="page-footer">
-        <a class="logo" href="./index.html"><span class="enother-color-logo">Web</span><span class="span-footer">Studio</span></a>
+        <a class="logo" href="./index.html">Web<span class="span-footer">Studio</span></a>
         <p class="footer-text">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
