--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </p>
                 </li>
                 <li>
-                    <h3 class="about-page">Diligence</h3>
+                    <h3 class="menu-about-page">Diligence</h3>
                     <p class="text-section">Research and confirm brands that
                         present the strongest digital growth
                         opportunities and minimize risk.</p>
