--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h2 >Promises</h2>
             <ul class="list">
                 <li>
-                    <h3 class="about-page">Strategy</h3>
+                    <h3 class="menu-about-page">Strategy</h3>
                     <p class="text-section">
                         Our goal is to identify the business
                         problem to walk away with the
@@ -56,7 +56,7 @@
                     </p>
                 </li>
                 <li>
-                    <h3 class="about-page">Punctuality</h3>
+                    <h3 class="menu-about-page">Punctuality</h3>
                     <p class="text-section">
                         Bring the key message to the
                         brand's audience for the best price
@@ -70,7 +70,7 @@
                         opportunities and minimize risk.</p>
                 </li>
                 <li>
-                    <h3 class="about-page">Technologies</h3>
+                    <h3 class="menu-about-page">Technologies</h3>
                     <p class="text-section">
                         Design practice focused on digital
                         experiences. We bring forth a deep
