--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </li>
             </ul>
         </section>
-        <section id="contacts">
+        <section class="contacts">
             <h2 class="about-page">Our Team</h2>
             <ul class="list">
                 <li class="list-item">
